# uploaded-consciousness-framework

./: .gitignore  DEVELOPER.md  FAILURE_MODE_REGISTRY.md  LICENSE  Makefile  NEXT-STEPS.md  README.md  SPONSORS.md  TOOLCHAIN.md  config.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
checkpoints/: NOTES.md
consciousness/: __init__.py  agent.py  autobiographical_memory.py  config.py  container_introspection.py  dashboard.py  dqfr.py  embedding_env.py  gwfr_merge.py  language_thermostat.py  language_trainer.py  language_world_model.py  markov_blanket.py  meta_optimizer.py  node.py  orchestrator.py  safety_constitution.py  safety_constraints.py  safety_measurer.py  safety_monitor.py  thermostat.py  world_model.py
docs/: CSDF_DSM6_BRIDGE.md  PIPELINE.md  THENOVAARK.md
docs/paper/: submission-cover-letter.tex  substrate-independent-program.tex
scripts/: run.py
