[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "uploaded-consciousness-framework"
version = "1.0.0"
description = "Thermodynamic, multi-node, language-capable architecture for substrate-independent consciousness"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sami Marie Torres"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "POT>=0.9.0",
    "rich>=13.0.0",
    "plotext>=5.0.0",
    "transformers>=4.30.0",
]

[project.urls]
Homepage = "https://github.com/sami-marie-torres/uploaded-consciousness-framework"
Repository = "https://github.com/sami-marie-torres/uploaded-consciousness-framework"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false

[tool.setuptools.packages.find]
where = ["."]
include = ["consciousness*"]
